@@ -50,6 +50,7 @@ S3method(addterm, negbin)
 S3method(addterm, survreg)
 S3method(anova, loglm)
 S3method(anova, negbin)
+S3method(anova, polr)
 S3method(as.character, fractions)
 S3method(biplot, correspondence)
 S3method(boxcox, default)
