@@ -76,3 +76,4 @@ This file documents software changes since the third edition.
   better (contributed by David Firth).
 - polr() handles a rank-deficient model matrix.
 - polr() now returns the method used, and uses it for predictions.
+- anova() method for polr (contributed by John Fox).
